fix (main-nav): fix alignment and add profile info

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -112,21 +112,26 @@ body {
     align-items: center;
     background-color: #fff;
     gap: 1rem;
+    height: 5rem;
     border-bottom: 1px solid #E2E2E2;
     vertical-align: middle;
 }
 
-.main-nav>h2 {
+.main-nav > div:nth-child(-n+2) {
+    display: flex;
     height: 100%;
-    /* vertical-align: middle; */
-    text-align: center;
+    padding: 0 1rem;
 }
 
-.main-nav>h2:first-child{
+.main-nav h2 {
+    margin: auto;
+}
+
+.main-nav > div:first-child{
     border: 1px solid #E2E2E2;
 }
 
-.main-nav>div:nth-last-child(2) {
+.main-nav > div:nth-last-child(2) {
     margin-left: auto;
 }
 
@@ -139,8 +144,8 @@ body {
 
 .notification-badge {
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: -12px;
+    right: -12px;
     width: 18px;
     height: 18px;
     display: flex;
@@ -152,6 +157,18 @@ body {
     color: #fff;
     font-size: 0.75rem;
     line-height: 0.75rem;
+    padding: 0.1rem;
+}
+
+.profile-info {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.profile-img {
+    width: 32px;
+    height: 32px;
 }
 
 /* header */
